--- a/DynamicBoard.UnitTest/Pages/DashboardIndex.razor
+++ b/DynamicBoard.UnitTest/Pages/DashboardIndex.razor
@@ -1,105 +1,69 @@
-﻿@page "/"
+﻿@page "/DashboardIndex"
 @using SME.DynamicBoard.UI
 @using SME.DynamicBoard.UI.Components
  
+
 <PageTitle>Index</PageTitle>
+
 <h1>Hello, world!</h1>
-<button type="button" @onclick="@LoadIframe">Load Iframe</button>
-<input type="text"  @bind="@crNo" />
+
+<input type="text" @bind="@dashboardID" placeholder="Enter dashboardID" />
+<input type="text" @bind="@language" placeholder="Enter Language " />
+<button type="button" @onclick="@LoadIframeV3">Load Iframe</button>
 
 <br />
 <br />
 <br />
-
-@* <SME.DynamicBoard.UI.Components.DashboardRenderView Language=1 AutoLoad="true" DashboardId="128" dashboardData="EmptyDashboardData" /> *@
-
-@* <div class="card">
-    <div class="card-body">
-        <div class="row">
-            <div class="col-3">
-                @if (ChartDataForNewRequest is not null)
-                {
-                    @if (ChartDataForNewRequest.ChartParams.Count > 0)
-                    {
-                        <SME.DynamicBoard.UI.Components.ChartRenderView AutoLoad="true" IsAllowPrint="true" IsAllowRefresh="true" ChartId="@chartIdForNewRequest" ChartData="@ChartDataForNewRequest" />
-                    }
-
-                }
-            </div>
-            <div class="col-3">
-                @if (ChartDataForPendingRequest is not null)
-                {
-                    @if (ChartDataForPendingRequest.ChartParams.Count > 0)
-                    {
-                        <SME.DynamicBoard.UI.Components.ChartRenderView AutoLoad="true" ChartId="@chartIdForPendingRequest" ChartData="@ChartDataForPendingRequest" />
-
-                    }
-                }
-
-            </div>
-            <div class="col-3">
-                @if (ChartDataForIssuedRequest is not null)
-                {
-
-                    @if (ChartDataForIssuedRequest.ChartParams.Count > 0)
-                    {
-                        <SME.DynamicBoard.UI.Components.ChartRenderView AutoLoad="true" ChartId="@chartIdForIssuedRequest" 
-                        ChartData="@ChartDataForIssuedRequest" />
-
-                    }
-                }
-
-            </div>
-            <div class="col-3">
-
-                @if (ChartDataForRejectedRequest is not null)
-                {
-                    @if (ChartDataForRejectedRequest.ChartParams.Count > 0)
-                    {
-                        <SME.DynamicBoard.UI.Components.ChartRenderView AutoLoad="true" ChartId="@chartIdForRejectedRequest"
-                        ChartData="@ChartDataForRejectedRequest" />
-                    }
-                }
-            </div>
-
-
-        </div>
-
-    </div>
-</div> *@
+@if (dashboardID!="" && dashboardID!="0")
+{              
+    <SME.DynamicBoard.UI.Components.DashboardRenderView Language=@language AutoLoad="true" DashboardId="@dashboardID" dashboardData="EmptyDashboardData" />
+}
 
 @code {
-    public DashboardData DashboardData { get; set; } = new();
-    static string dashboardID = "4";
-    static string chartIDLable = "99";
- 
-    public SME.DynamicBoard.UI.DashboardData EmptyDashboardData { get; set; } = new();
-    public SME.DynamicBoard.UI.DashboardData DashboardDataForNewRequest { get; set; } = new();
-    public SME.DynamicBoard.UI.DashboardData DashboardDataForPendingRequest { get; set; } = new();
-    public SME.DynamicBoard.UI.DashboardData DashboardDataForIssuedRequest { get; set; } = new();
-    public SME.DynamicBoard.UI.DashboardData DashboardDataForRejectedRequest { get; set; } = new();
 
-    string chartIdForNewRequest = "103";
+    public DashboardData DashboardData { get; set; } = new();
+    static string dashboardID = "";
+    public int language = 2;
+    public SME.DynamicBoard.UI.DashboardData EmptyDashboardData { get; set; } = new();
+
+
+    //  public ChartData ChartDataForNewRequest { get; set; } = new();
+    public ChartData ChartData { get; set; } = new();
+    static string chartID = "4";
+    static string chartIDLable = "99";
+
+
+
+
+
+    public SME.DynamicBoard.UI.ChartData EmptyChartData { get; set; } = new();
+    public SME.DynamicBoard.UI.ChartData ChartDataForNewRequest { get; set; } = new();
+    public SME.DynamicBoard.UI.ChartData ChartDataForPendingRequest { get; set; } = new();
+    public SME.DynamicBoard.UI.ChartData ChartDataForIssuedRequest { get; set; } = new();
+    public SME.DynamicBoard.UI.ChartData ChartDataForRejectedRequest { get; set; } = new();
+
+    string chartIdForNewRequest = "128";
     string chartIdForPendingRequest = "104";
     string chartIdForIssuedRequest = "106";
     string chartIdForRejectedRequest = "107";
-    SME.DynamicBoard.UI.ChartData chartRenderView { get; set; } = new();
-    SME.DynamicBoard.UI.Components.ChartRenderView chartRenderView1;
     string crNo = "1006414";
-
     protected override async Task OnInitializedAsync()
     {
 
     }
 
 
-    public async Task LoadIframe()
+    public async Task LoadIframeV3()
     {
-        DashboardDataForNewRequest = new();
+        ChartDataForNewRequest = new();
 
+        EmptyDashboardData = new();
         //ChartData.ReplaceValue("CRNombers", "1006414", "7058926");
-        DashboardData.Add("CRNombers", new List<string> { crNo });
-        DashboardData.Add("IsServiceEnded", new List<string> { "0" });
+        ChartData.Add("CRNombers", new List<string> { crNo });
+        ChartData.Add("IsServiceEnded", new List<string> { "0" });
+
+        //EmptyDashboardData.Add("CRNombers", new List<string> { crNo });
+        EmptyDashboardData.Add("IsExpire", new List<string> { "1" });
 
         // ChartData2.Add("YearOfEstablishment", new List<string> { "2023" });
 
@@ -110,15 +74,16 @@
         // {
         //     await chartRenderView1.Refersh();
         // }
-        DashboardDataForNewRequest = new();
-        DashboardDataForPendingRequest = new();
-        DashboardDataForIssuedRequest = new();
-        DashboardDataForRejectedRequest = new();
+        ChartDataForNewRequest = new();
+        ChartDataForPendingRequest = new();
+        ChartDataForIssuedRequest = new();
+        ChartDataForRejectedRequest = new();
 
-        // DashboardDataForNewRequest.Add("StartupsNewRequestStatus", new List<string> { "2" });
-        // DashboardDataForPendingRequest.Add("StartupsPendingRequestIds", new List<string> { "4", "5", "6", "7", "8", "9" });
-        // DashboardDataForIssuedRequest.Add("StartupsIssuedRequestID", new List<string> { "10" });
-        // DashboardDataForRejectedRequest.Add("StartupsRejectedRequest", new List<string> { "3" });
+        ChartDataForNewRequest.Add("StartupsNewRequestStatus", new List<string> { "2" });
+        ChartDataForPendingRequest.Add("StartupsPendingRequestIds", new List<string> { "4", "5", "6", "7", "8", "9" });
+        ChartDataForIssuedRequest.Add("StartupsIssuedRequestID", new List<string> { "10" });
+        ChartDataForRejectedRequest.Add("StartupsRejectedRequest", new List<string> { "3" });
+        
         StateHasChanged();
     }
 
