--- a/DynamicBoard.UnitTest/Pages/Index.razor
+++ b/DynamicBoard.UnitTest/Pages/Index.razor
@@ -1,23 +1,19 @@
 ﻿@page "/"
 @using SME.DynamicBoard.UI
 @using SME.DynamicBoard.UI.Components
- 
+
 
 <PageTitle>Index</PageTitle>
 
 <h1>Hello, world!</h1>
-
-<input type="text" @bind="@dashboardID" placeholder="Enter dashboardID" />
-<input type="text" @bind="@language" placeholder="Enter Language " />
 <button type="button" @onclick="@LoadIframeV3">Load Iframe</button>
-
-@* <input type="text"  @bind="@crNo" /> *@
+<input type="text" @bind="@crNo" />
 @* @if (!string.IsNullOrEmpty(chartID))
 {
     <SME.DynamicBoard.UI.Components.ChartRenderView @ref="chartRenderView" AutoLoad="false" IsAllowRefresh="true" ChartId="@chartID" ChartData="@ChartData" />
     <br />
     <p>Lable</p>
-   
+
 } *@
 <br />
 <br />
@@ -27,13 +23,10 @@
 <SME.DynamicBoard.UI.Components.ChartRenderView @ref="chartRenderView1"  AutoLoad="true" IsAllowRefresh="true" ChartId="4" ChartData="@ChartData" />
  *@
 
-@* <SME.DynamicBoard.UI.Components.ChartRenderView Language=1 AutoLoad="true" ChartId="128" ChartData="EmptyChartData" /> *@
-@if (dashboardID!="" && dashboardID!="0")
-{
-    <SME.DynamicBoard.UI.Components.DashboardRenderView Language=@language AutoLoad="true" DashboardId="@dashboardID" dashboardData="EmptyDashboardData" />
-}
+<SME.DynamicBoard.UI.Components.ChartRenderView Language=1 AutoLoad="true" ChartId="128" ChartData="EmptyChartData" />
 
-@* 
+
+
 <div class="card">
     <div class="card-body">
         <div class="row">
@@ -64,8 +57,8 @@
 
                     @if (ChartDataForIssuedRequest.ChartParams.Count > 0)
                     {
-                        <SME.DynamicBoard.UI.Components.ChartRenderView AutoLoad="true" ChartId="@chartIdForIssuedRequest" 
-                        ChartData="@ChartDataForIssuedRequest" />
+                        <SME.DynamicBoard.UI.Components.ChartRenderView AutoLoad="true" ChartId="@chartIdForIssuedRequest"
+                                                                        ChartData="@ChartDataForIssuedRequest" />
 
                     }
                 }
@@ -78,7 +71,7 @@
                     @if (ChartDataForRejectedRequest.ChartParams.Count > 0)
                     {
                         <SME.DynamicBoard.UI.Components.ChartRenderView AutoLoad="true" ChartId="@chartIdForRejectedRequest"
-                        ChartData="@ChartDataForRejectedRequest" />
+                                                                        ChartData="@ChartDataForRejectedRequest" />
                     }
                 }
             </div>
@@ -87,28 +80,13 @@
         </div>
 
     </div>
-</div> *@
-
+</div>
 
 @code {
-
-    public DashboardData DashboardData { get; set; } = new();
-    static string dashboardID = "";
-    public int language = 1;
-    public SME.DynamicBoard.UI.DashboardData EmptyDashboardData { get; set; } = new();
-
-
-
-
-
     //  public ChartData ChartDataForNewRequest { get; set; } = new();
     public ChartData ChartData { get; set; } = new();
     static string chartID = "4";
     static string chartIDLable = "99";
-
-
-
-
 
     public SME.DynamicBoard.UI.ChartData EmptyChartData { get; set; } = new();
     public SME.DynamicBoard.UI.ChartData ChartDataForNewRequest { get; set; } = new();
@@ -133,18 +111,15 @@
     {
         ChartDataForNewRequest = new();
 
-        EmptyDashboardData = new();
+
         //ChartData.ReplaceValue("CRNombers", "1006414", "7058926");
         ChartData.Add("CRNombers", new List<string> { crNo });
         ChartData.Add("IsServiceEnded", new List<string> { "0" });
 
-        //EmptyDashboardData.Add("CRNombers", new List<string> { crNo });
-        EmptyDashboardData.Add("IsExpire", new List<string> { "1" });
-
         // ChartData2.Add("YearOfEstablishment", new List<string> { "2023" });
 
 
-       // ChartDataForNewRequest.Add("StartupsNewRequestStatus", new List<string> { "2" });
+        // ChartDataForNewRequest.Add("StartupsNewRequestStatus", new List<string> { "2" });
 
         // if (chartRenderView1 is not null)
         // {
@@ -159,7 +134,7 @@
         ChartDataForPendingRequest.Add("StartupsPendingRequestIds", new List<string> { "4", "5", "6", "7", "8", "9" });
         ChartDataForIssuedRequest.Add("StartupsIssuedRequestID", new List<string> { "10" });
         ChartDataForRejectedRequest.Add("StartupsRejectedRequest", new List<string> { "3" });
-        
+
         StateHasChanged();
     }
 
