--- a/DynamicBoard.Application/Components/Layout/MainLayout.razor
+++ b/DynamicBoard.Application/Components/Layout/MainLayout.razor
@@ -1,13 +1,25 @@
 ﻿@inherits LayoutComponentBase
+@using CMouss.IdentityFramework;
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@inject ProtectedLocalStorage BrowserStorage
+@inject NavigationManager NavManager
+
+
 <FluentLayout>
     <FluentHeader>
-        DynamicBoard.Application
+        Dynamic Board Application
     </FluentHeader>
     <FluentStack Class="main" Orientation="Orientation.Horizontal" Width="100%">
-        <NavMenu />
+        @if (isInitComplete)
+        {
+            <NavMenu />
+        }
         <FluentBodyContent>
             <div class="content">
-                @Body
+                @if (isInitComplete)
+                {
+                    @Body
+                }
             </div>
         </FluentBodyContent>
     </FluentStack>
@@ -21,8 +33,61 @@
     </FluentFooter>
 </FluentLayout>
 
-<div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
-</div>
+
+@code {
+    private bool IsAdministrator = false;
+    public bool isInitComplete = false;
+
+    protected override void OnInitialized()
+    {
+        GetUserInfo();
+        isInitComplete = true;
+    }
+
+    public async Task GetUserInfo()
+    {
+        try
+        {
+            var result = await BrowserStorage.GetAsync<string>("token");
+            if (result.Success && result.Value.Length > 10)
+            {
+                UserToken userToken = IDFManager.UserTokenServices.Validate(result.Value);
+                if (userToken == null)
+                {
+                    RedirectToLogin();
+                }
+                else
+                {
+                    if (userToken.User.Roles is not null)
+                    {
+                        if (userToken.User.Roles.Count > 0)
+                        {
+                            IsAdministrator = userToken.User.Roles.Any(item => item.Title.ToLower().Trim() == "administrators");
+                            if (!IsAdministrator)
+                            {
+                                RedirectToLogin();
+                            }
+                        }
+                    }
+                }
+            }
+            else
+            {
+                RedirectToLogin();
+            }
+            StateHasChanged();
+        }
+        catch (Exception ex)
+        {
+            RedirectToLogin();
+        }
+    }
+
+    public void RedirectToLogin()
+    {
+        BrowserStorage.DeleteAsync("token");
+        StateHasChanged();
+        NavManager.NavigateTo("/");
+    }
+
+}
