--- a/DynamicBoard.Application/Components/Pages/Home.razor
+++ b/DynamicBoard.Application/Components/Pages/Home.razor
@@ -1,7 +1,2 @@
-﻿@page "/" 
- 
-<PageTitle>Home</PageTitle>
-
-<h1>Hello, world!</h1>
-
-Welcome to Dynamic Board.
+﻿@page "/home"
+@layout Layout.MainLayout
