--- a/DynamicBoard.Application/Views/Shared/_ChartPartial.cshtml
+++ b/DynamicBoard.Application/Views/Shared/_ChartPartial.cshtml
@@ -4,48 +4,144 @@
 @using Microsoft.JSInterop
 @inject IJSRuntime JSRuntime
 @model DynamicBoard.Application.Model.RenderChart
+<style>
+    .progress-pie-chart {
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        background-color: #E5E5E5;
+        position: relative;
+        &.gt-50
 
-
-    @if(Model.HideChartButtons==false)
     {
-     @if (Model.IsAllowRefresh)
+        background-color: #81CE97;
+    }
+
+    }
+
+    .ppc-progress {
+        content: "";
+        position: absolute;
+        border-radius: 50%;
+        left: calc(50% - 100px);
+        top: calc(50% - 100px);
+        width: 200px;
+        height: 200px;
+        clip: rect(0, 200px, 200px, 100px);
+        .ppc-progress-fill
+
+    {
+        content: "";
+        position: absolute;
+        border-radius: 50%;
+        left: calc(50% - 100px);
+        top: calc(50% - 100px);
+        width: 200px;
+        height: 200px;
+        clip: rect(0, 100px, 200px, 0);
+        background: #81CE97;
+        transform: rotate(60deg);
+    }
+
+    }
+
+    .gt-50 .ppc-progress {
+        clip: rect(0, 100px, 200px, 0);
+        .ppc-progress-fill
+
+    {
+        clip: rect(0, 200px, 200px, 100px);
+        background: #E5E5E5;
+    }
+
+    }
+
+    .ppc-percents {
+        content: "";
+        position: absolute;
+        border-radius: 50%;
+        left: calc(50% - 173.91304px/2);
+        top: calc(50% - 173.91304px/2);
+        width: 173.91304px;
+        height: 173.91304px;
+        background: #fff;
+        text-align: center;
+        display: table;
+        span
+
+    {
+        display: block;
+        font-size: 2.6em;
+        font-weight: bold;
+        color: #81CE97;
+    }
+
+    }
+
+    .pcc-percents-wrapper {
+        display: table-cell;
+        vertical-align: middle;
+    }
+
+    .progress-pie-chart {
+        margin: 50px auto 0;
+    }
+</style>
+
+@if (Model.HideChartButtons == false)
+{
+    @if (Model.IsAllowRefresh)
     {
         <img src="~/images/refresh.png"  id="refreshButton_@Model.ChartID" class="refreshbutton" onclick="refreshButton(this)"
-        data-chart-id="@Model.ChartID" 
-        data-refresh-time= "@Model.RefershTime"
-        data-chart-type= "@Model.ChartType"
-        data-json-axis-labels = "@System.Text.Json.JsonSerializer.Serialize(string.IsNullOrEmpty(@Model?.JsonXaxis_labels) ? "null" :@Model?.JsonXaxis_labels)"
-        data-json-graph-configurations = "@System.Text.Json.JsonSerializer.Serialize(string.IsNullOrEmpty(Model?.json_graphConfigurations) ? "null" :Model?.json_graphConfigurations)"
-        data-json-chart-title = "@Html.Raw(string.IsNullOrEmpty(Model?.jsonchartTitle) ? "null" : Model?.jsonchartTitle)"
-                 alt="Refresh" style="float: right; width: 20px;">
+             data-chart-id="@Model.ChartID"
+             data-refresh-time="@Model.RefershTime"
+             data-chart-type="@Model.ChartType"
+             data-json-axis-labels="@System.Text.Json.JsonSerializer.Serialize(string.IsNullOrEmpty(@Model?.JsonXaxis_labels) ? "null" :@Model?.JsonXaxis_labels)"
+             data-json-graph-configurations="@System.Text.Json.JsonSerializer.Serialize(string.IsNullOrEmpty(Model?.json_graphConfigurations) ? "null" :Model?.json_graphConfigurations)"
+             data-json-chart-title="@Html.Raw(string.IsNullOrEmpty(Model?.jsonchartTitle) ? "null" : Model?.jsonchartTitle)"
+             alt="Refresh" style="float: right; width: 20px;">
     }
     @if (Model.IsAllowPrint)
     {
         @if (Model.ChartType != "Label")
         {
-            <img src="~/images/printer.png" onclick="printElement('div_@Model.ChartID','')" class="printbutton"  alt="printer" style="float: right; width: 25px;">
+            <img src="~/images/printer.png" onclick="printElement('div_@Model.ChartID','')" class="printbutton" alt="printer" style="float: right; width: 25px;">
         }
         else
         {
-                <img src="~/images/printer.png" onclick="printElement('div_@Model.ChartID','Label')" class="printbutton" alt="printer" style="float: right; width: 25px;">
+            <img src="~/images/printer.png" onclick="printElement('div_@Model.ChartID','Label')" class="printbutton" alt="printer" style="float: right; width: 25px;">
         }
     }
-    }
-    <img id="loader_@Model.ChartID" class="loader" src="~/images/Spinne.gif" />
+}
+<img id="loader_@Model.ChartID" class="loader" src="~/images/Spinne.gif" />
 
 <div id="div_@Model.ChartID" style="display: flex;justify-content: center;align-items: center; @(Model.ChartType != "Label"? (Model.ChartHeight>300? "height:"+Model.ChartHeight+"px;":"height:300px;"):"")">
 
-        @if (Model.ChartType != "Label")
-        {
-            <canvas id="canvas_@Model.ChartID" width="405px" height="450px"></canvas>
-        }
-        else
-        {
-            <div style="display: flex;justify-content:center;">
-                <h3 style="color:#1C459D">@Model.jsonchartTitle.Replace("\"", "")</h3>
-            </div>
-            <div style="display: flex;justify-content:center;">
-                <h3 style="margin: auto;font-size: 35px;font-style: inherit;text-align: center;color:#C1A968" id="Label_@Model.ChartID">@Model.LabelValue</h3>
-            </div>
-        }
+    @if (Model.ChartType == "Label")
+    {
+        <div style="display: flex;justify-content:center;">
+            <h3 style="color:#1C459D">@Model.jsonchartTitle.Replace("\"", "")</h3>
         </div>
+        <div style="display: flex;justify-content:center;">
+            <h3 style="margin: auto;font-size: 35px;font-style: inherit;text-align: center;color:#C1A968" id="Label_@Model.ChartID">@Model.LabelValue</h3>
+        </div>
+    }
+    else if (Model.ChartType == "Progress Pie Chart")
+    {
+        <div id='Progress-@Model.ChartID' class='progress-pie-chart' data-percent='0'>
+            <div class='ppc-progress'>
+                <div class='ppc-progress-fill'></div>
+            </div>
+            <div class='ppc-percents'>
+                <div class='pcc-percents-wrapper'>
+                    <span>%</span>
+                </div>
+            </div>
+        </div>
+
+    }
+    else
+    {
+        <canvas id="canvas_@Model.ChartID" width="405px" height="450px"></canvas>
+    }
+</div>
