--- a/DynamicBoard.Application/Views/Chart/ChartView.cshtml
+++ b/DynamicBoard.Application/Views/Chart/ChartView.cshtml
@@ -7,88 +7,12 @@
 @using Microsoft.JSInterop
 @model RenderChart
 @inject IJSRuntime JSRuntime
+<script src="https://d3js.org/d3.v4.min.js"></script>
 <style>
-    .progress-pie-chart {
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        background-color: #E5E5E5;
-        position: relative;
-        &.gt-50
-
-    {
-        background-color: #81CE97;
-    }
-
-    }
-
-    .ppc-progress {
-        content: "";
-        position: absolute;
-        border-radius: 50%;
-        left: calc(50% - 100px);
-        top: calc(50% - 100px);
-        width: 200px;
-        height: 200px;
-        clip: rect(0, 200px, 200px, 100px);
-        .ppc-progress-fill
-
-    {
-        content: "";
-        position: absolute;
-        border-radius: 50%;
-        left: calc(50% - 100px);
-        top: calc(50% - 100px);
-        width: 200px;
-        height: 200px;
-        clip: rect(0, 100px, 200px, 0);
-        background: #81CE97;
-        transform: rotate(60deg);
-    }
-
-    }
-
-    .gt-50 .ppc-progress {
-        clip: rect(0, 100px, 200px, 0);
-        .ppc-progress-fill
-
-    {
-        clip: rect(0, 200px, 200px, 100px);
-        background: #E5E5E5;
-    }
-
-    }
-
-    .ppc-percents {
-        content: "";
-        position: absolute;
-        border-radius: 50%;
-        left: calc(50% - 173.91304px/2);
-        top: calc(50% - 173.91304px/2);
-        width: 173.91304px;
-        height: 173.91304px;
-        background: #fff;
-        text-align: center;
-        display: table;
-        span
-
-    {
-        display: block;
-        font-size: 2.6em;
-        font-weight: bold;
-        color: #81CE97;
-    }
-
-    }
-
-    .pcc-percents-wrapper {
-        display: table-cell;
-        vertical-align: middle;
-    }
-
-    .progress-pie-chart {
-        margin: 50px auto 0;
-    }
+    #Progress-@Model.ChartID {
+    width: 100%;
+    height: 50%;
+    position: relative;}
 </style>
 <div>
     @if (Model.IsAllowRefresh)
@@ -119,16 +43,7 @@
         }
         else if (Model.ChartType == "Progress Pie Chart")
         {
-            <div id='Progress-@Model.ChartID' class='progress-pie-chart' data-percent='0'>
-                <div class='ppc-progress'>
-                    <div class='ppc-progress-fill'></div>
-                </div>
-                <div class='ppc-percents'>
-                    <div class='pcc-percents-wrapper'>
-                        <span>%</span>
-                    </div>
-                </div>
-            </div>
+               <div id="Progress-@Model.ChartID" ></div>
             
         }
         else
