--- a/DynamicBoard.Application/Views/Shared/_Layout.cshtml
+++ b/DynamicBoard.Application/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
 <script src="~/js/dist/chart.umd.min.js"></script>
 
 <script src="~/js/jquery-3.6.0.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
 <script type="text/javascript" charset="utf-8">
 
     var isloading = true
@@ -107,19 +108,60 @@
             debugger
             var chartDiv = document.getElementById('div_' + @Model.ChartID);
             var progressDiv = document.getElementById('Progress-' + @Model.ChartID);
-            var select = (param) => {
-                return document.querySelector(param);
-            }
-            var $ppc = select('.progress-pie-chart');
-            var dynamicPercent = @Model.LabelValue;
-            $ppc.setAttribute('data-percent', dynamicPercent);
-            var percent = parseInt($ppc.getAttribute('data-percent')),
-                deg = 360 * percent / 100;
-            if (percent > 50) {
-                $ppc.classList.add('gt-50');
-            }
-            select('.ppc-progress-fill').style.transform = 'rotate(' + deg + 'deg)';
-            select('.ppc-percents span').innerHTML = (percent + '%');
+            var percent = @Model.LabelValue / 100;
+            var text = (percent * 100) + "%";
+
+            var width = chartDiv.offsetWidth || 200; 
+            var height = chartDiv.offsetHeight || 200;
+            var thickness = width / 10;
+            var duration = 50;
+            var foregroundColor = "#0a8";
+            var backgroundColor = "#ccc";
+
+            var radius = Math.min(width, height) / 2;
+            var color = d3.scaleOrdinal([foregroundColor, backgroundColor]);
+
+            var svg = d3.select("#Progress-" + @Model.ChartID)
+                .append('svg')
+                .attr('class', 'pie')
+                .attr('width', width)
+                .attr('height', height);
+
+            var g = svg.append('g')
+                .attr('transform', 'translate(' + (width / 2) + ',' + (height / 2) + ')');
+
+            var arc = d3.arc()
+                .innerRadius(radius - thickness)
+                .outerRadius(radius);
+
+            var pie = d3.pie()
+                .sort(null);
+
+            var path = g.selectAll('path')
+                .data(pie([0, 1]))
+                .enter()
+                .append('path')
+                .attr('d', arc)
+                .attr('fill', function (d, i) {
+                    return color(i);
+                })
+                .each(function (d) { this._current = d; });
+
+            path.data(pie([percent, 1 - percent])).transition()
+                .duration(duration)
+                .attrTween('d', function (d) {
+                    var interpolate = d3.interpolate(this._current, d);
+                    this._current = interpolate(0);
+                    return function (t) {
+                        return arc(interpolate(t));
+                    }
+                });
+
+            g.append('text')
+                .attr('text-anchor', 'middle')
+                .attr('dy', '.35em')
+                .text(text);
+
             setTimeout(function () {
                 chartDiv.style.display = "block";
                 progressDiv.style.display = "block";
