--- a/DynamicBoard.Application/Views/Chart/ChartView.cshtml
+++ b/DynamicBoard.Application/Views/Chart/ChartView.cshtml
@@ -1,56 +1,86 @@
 ﻿@{
-    ViewData["Title"] = "ChartView";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+	ViewData["Title"] = "ChartView";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @using DynamicBoard.Application.Model
 @using DynamicBoard.Models
 @using Microsoft.JSInterop
 @model RenderChart
+
 @inject IJSRuntime JSRuntime
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <style>
-    #Progress-@Model.ChartID {
-    width: 100%;
-    height: 50%;
-    position: relative;}
+	#Progress- @Model.ChartID {
+		width: 100%;
+		height: 50%;
+		position: relative;
+	}
 </style>
 <div>
-    @if (Model.IsAllowRefresh)
-    {
-        <img src="~/images/refresh.png" onclick="refreshPage()" alt="Refresh" style=" float: right; width: 20px;">
-        
-
-    }
-    @if (Model.IsAllowPrint)
-    {
-        <img src="~/images/printer.png" onclick="printElement('div_@Model.ChartID') " alt="printer" style=" float: right; width: 25px;">
-    }
-    
+	@if (Model.IsAllowRefresh)
+	{
+		<img src="~/images/refresh.png" onclick="refreshPage()" alt="Refresh" style=" float: right; width: 20px;">
 
 
+	}
+	@if (Model.IsAllowPrint)
+	{
+		<img src="~/images/printer.png" onclick="printElement('div_@Model.ChartID') " alt="printer" style=" float: right; width: 25px;">
+	}
 
-    <img id="loader_@Model.ChartID" class="loader" src="~/images/Spinne.gif" />
 
-    <div id="div_@Model.ChartID" style="justify-content:center;display:none;">
-        @if (Model.ChartType == "Label")
-        {
-            <div style="display: flex;justify-content:center;">
-                <h3 style="color:#1C459D">@Model.jsonchartTitle.Replace("\"", "")</h3>
-            </div>
-            <div style="display: flex;justify-content:center;">
-                <h3 style="margin: auto;font-size: 35px;font-style: inherit;text-align: center;color:#C1A968" id="Label_@Model.ChartID"></h3>
-            </div>
-        }
-        else if (Model.ChartType == "Progress Pie Chart")
-        {
-               <div id="Progress-@Model.ChartID" ></div>
-            
-        }
-        else
-        {
-            <canvas id="canvas_@Model.ChartID" width="405px" height="450px"> </canvas>
-        }
-    </div>
+
+
+	<img id="loader_@Model.ChartID" class="loader" src="~/images/Spinne.gif" />
+
+	<div id="div_@Model.ChartID" style="justify-content:center;display:none;">
+		@if (Model.ChartType == "Label")
+		{
+			<div style="display: flex;justify-content:center;">
+				<h3 style="color:#1C459D">@Model.jsonchartTitle.Replace("\"", "")</h3>
+			</div>
+			<div style="display: flex;justify-content:center;">
+				<h3 style="margin: auto;font-size: 35px;font-style: inherit;text-align: center;color:#C1A968" id="Label_@Model.ChartID"></h3>
+			</div>
+		}
+		else if (Model.ChartType == "Progress Pie Chart")
+		{
+			<div id="Progress-@Model.ChartID"></div>
+
+		}
+		else if (Model.ChartType == "Data Grid")
+		{
+			<div id="Grid_@Model.ChartID">
+				@if (Model.dataGrid is not null)
+				{
+					<table border="1" style="border-collapse: collapse; width: 100%;">
+						<thead>
+							<tr>
+								@foreach (var key in Model.dataGrid[0].Keys)
+								{
+									<th>@key</th>
+								}
+							</tr>
+						<tbody>
+								@foreach (var row in Model.dataGrid)
+								{
+								<tr>
+										@foreach (var value in row.Values)
+										{
+										<td>@value</td>
+										}
+								</tr>
+								}
+						</tbody>
+					</table>
+				}				
+			</div>
+		}
+		else
+		{
+			<canvas id="canvas_@Model.ChartID" width="405px" height="450px"> </canvas>
+		}
+	</div>
 
 
 </div>
