--- a/DynamicBoard.Application/Views/Chart/ChartView.cshtml
+++ b/DynamicBoard.Application/Views/Chart/ChartView.cshtml
@@ -53,18 +53,26 @@
 			<div id="Grid_@Model.ChartID">
 				@if (Model.dataGrid is not null)
 				{
-					<table border="1" style="border-collapse: collapse; width: 100%;">
-						<thead>
+					<button id="exportBtn" class="btn btn-primary" style="float:right; background-color:#a58d63; border-color:#a58d63;">
+						Export to Excel
+					</button>
+					<br />
+					<div>
+						<p style="visibility: hidden;">Hidden</p>
+					</div>
+					<table class="table table-hover align-middle mb-0">
+						<thead class="table-dark" style="color: #fff; background-color: #343a40; border-color: #484e53;">
 							<tr>
 								@foreach (var key in Model.dataGrid[0].Keys)
 								{
 									<th>@key</th>
+
 								}
 							</tr>
 						<tbody>
 								@foreach (var row in Model.dataGrid)
 								{
-								<tr>
+								<tr style="background-color:#fcf0db;">
 										@foreach (var value in row.Values)
 										{
 										<td>@value</td>
@@ -73,7 +81,7 @@
 								}
 						</tbody>
 					</table>
-				}				
+				}
 			</div>
 		}
 		else
@@ -84,5 +92,13 @@
 
 
 </div>
+
+<link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+<script type="text/javascript" charset="utf-8">
+		document.getElementById("exportBtn").addEventListener("click", function () {
+		debugger;
+		alert('Im here');
+	});
+</script>
 
 
