--- a/DynamicBoard.Application/Views/Shared/_Layout.cshtml
+++ b/DynamicBoard.Application/Views/Shared/_Layout.cshtml
@@ -181,7 +181,7 @@
 		}
 
 		var canvas = 'canvas_' + @Model.ChartID;
-
+		debugger;
 		//loadCanvas(@Model.ChartID);
 		var ctx = document.getElementById(canvas).getContext('2d');
 		//debugger
@@ -280,7 +280,7 @@
 		}
 
 		var canvas = 'canvas_' + @Model.ChartID;
-
+		debugger;
 		//loadCanvas(@Model.ChartID);
 		var ctx = document.getElementById(canvas).getContext('2d');
 		//debugger
@@ -369,7 +369,7 @@
 		}
 
 		var canvas = 'canvas_' + @Model.ChartID;
-
+		debugger;
 		//loadCanvas(@Model.ChartID);
 		var ctx = document.getElementById(canvas).getContext('2d');
 		//debugger
